--- a/src/css/Menu.css
+++ b/src/css/Menu.css
@@ -2,7 +2,7 @@
   width: 240px;
   background: #23272e;
   color: #fff;
-  height: 100vh;
+  height: 100%;
   position: fixed;
   left: 0;
   top: 0;
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: column;
   z-index: 1100;
+  margin-top: 68px;
 }
 
 .sidebar-title {
