Feature - Aggiunte logiche menu e gestione responsivita'

--- a/src/css/NavBar.css
+++ b/src/css/NavBar.css
@@ -38,3 +38,24 @@
   color: #fff;
   text-decoration: none;
 }
+
+@media (max-width: 500px) {
+  .nav-links {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background: #222;
+    width: 100vw;
+    flex-direction: column;
+    gap: 0;
+  }
+
+  .nav-links.open {
+    display: flex;
+  }
+
+  .nav-toggle {
+    display: block;
+  }
+}
